# django-recent-objects

./: .pre-commit-config.yaml  CHANGELOG.rst  LICENSE  MANIFEST.in  README.rst  django_recent_objects.py  setup.cfg  setup.py  tox.ini
.github/workflows/: tests.yml
recent_objects/: recent_objects.py
tests/testapp/: models.py  settings.py  test_recent_objects.py  urls.py
